[package]
name = "yaxpeax-6502"
version = "0.0.1"
edition = "2018"
license = "0BSD"
repository = "https://github.com/cr1901/yaxpeax-6502"
description = "6502 decoder for the yaxpeax project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaxpeax-arch = { version = "0.0.5", default-features = false, features = [] }
take_mut = "0.2.2"
