[package]
name = "yaxpeax-6502"
version = "0.0.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["yaxpeax-arch/std"]

[dependencies]
yaxpeax-arch = { version = "0.2.4", default-features = false, features = [] }
take_mut = "0.2.2"
